# gmail-fisher

./: .gitignore  .travis.yml  Dockerfile  Dockerfile.mac  LICENSE  Pipfile  README.md  cronjob.txt  docker-compose.yml  export_expenses.sh  gmail-save-attachments.py  pyproject.toml  run.py
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  python-app.yml
docs/adr/: 20210313-async-http-requests.md
gmail_fisher/: __init__.py  authenticate.py  config.py  cron_test.py  gateway.py  gmail_gateway.py  io.py  log.py  main.py  models.py  parsers.py  run.py  s3_uploader.py  save_attachments.py  services.py  stats.py  utils.py
gmail_fisher/api/: gateway.py
gmail_fisher/data/: models.py  s3_uploader.py
gmail_fisher/parsers/: __init__.py  bank.py  food.py  restaurant-filters.json  transportation.py
gmail_fisher/save_attachments/: save_attachments.py
gmail_fisher/services/: attachments.py  bank.py  food.py  messages.py  transport.py
gmail_fisher/utils/: config.py  file_utils.py  json_utils.py
tests/: conftest.py  test_gateway.py  test_gmail_gateway.py  test_gmail_utils.py  test_models.py  test_parsers.py  test_parsers_food.py  test_save_attachments.py  test_stats.py
tests/save_attachments/: test_save_attachments.py
