[tool.poetry]
name = "gmail-fisher"
version = "0.1.0"
description = "Automation scripts for interacting with Gmail API"
authors = ["Valter Nepomuceno <valter.nep@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
google-auth = "^1.23.0"
google-api-python-client = "^2.0.0"
google-auth-oauthlib = "^0.4.2"
google = "^3.0.0"
matplotlib = "^3.3.3"
coloredlogs = "^15.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
