[tool.poetry]
name = "gmail-fisher"
version = "0.1.0"
description = "Automation scripts for interacting with Gmail API"
authors = ["Valter Nepomuceno <valter.nep@gmail.com>"]

[tool.poetry.scripts]
save_attachments = "gmail_fisher.run:save_attachments_command"
list_messages = "gmail_fisher.run:list_messages_command"
export_uber_eats_expenses = "gmail_fisher.run:export_uber_eats_expenses_command"
export_bolt_food_expenses = "gmail_fisher.run:export_bolt_food_expenses_command"
export_food_expenses = "gmail_fisher.run:export_food_expenses_command"
export_bank_expenses = "gmail_fisher.run:export_bank_expenses_command"
export_transport_expenses = "gmail_fisher.run:export_transport_expenses_command"

[tool.poetry.dependencies]
python = "^3.10"
google-auth = "^2.3.0"
google-api-python-client = "^2.39.0"
google-auth-oauthlib = "^0.5.0"
google = "^3.0.0"
matplotlib = "^3.3.3"
coloredlogs = "^15.0"
click = "^8.0.3"
black = "^21.12b0"
asyncio = "^3.4.3"
pytest = "^7.1.0"
html2text = "^2020.1.16"
fastapi = "^0.70.1"
uvicorn = "^0.16.0"
boto3 = "^1.21.13"
python-dotenv = "^0.19.2"
pdfplumber = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"

[build-system]
requires = ["poetry-core>=1.0.2"]
build-backend = "poetry.core.masonry.api"
