[tool.poetry]
name = "gmail-fisher"
version = "0.1.0"
description = "Automation scripts for interacting with Gmail API"
authors = ["Valter Nepomuceno <valter.nep@gmail.com>"]

[tool.poetry.scripts]
save_attachments = "gmail_fisher.run:save_attachments_command"
list_messages = "gmail_fisher.run:list_messages_command"
export_uber_eats_expenses = "gmail_fisher.run:export_uber_eats_expenses_command"
export_bolt_food_expenses = "gmail_fisher.run:export_bolt_food_expenses_command"
export_food_expenses = "gmail_fisher.run:export_food_expenses_command"
export_bank_expenses = "gmail_fisher.run:export_bank_expenses_command"
export_transport_expenses = "gmail_fisher.run:export_transport_expenses_command"

[tool.poetry.dependencies]
python = "^3.11"
google-auth = "^2.26.1"
google-auth-oauthlib = "^1.2.0"
google-api-python-client = "^2.112.0"
google = "^3.0.0"
matplotlib = "^3.8.2"
click = "^8.1.7"
asyncio = "^3.4.3"
html2text = "^2020.1.16"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
boto3 = "^1.34.14"
python-dotenv = "^1.0.0"
pdfplumber = "^0.10.3"
coloredlogs = "^15.0.1"
alive-progress = "^3.1.5"
black = "^23.12.1"
pydantic = "^2.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core>=1.0.2"]
build-backend = "poetry.core.masonry.api"
